<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:visibility="visible">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/text_ola"
        android:textColor="#546E7A"
        android:textSize="15sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/inter_bold"
        android:paddingBottom="10dp"
        android:text="@string/text_professor"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/purple_200"
        android:textSize="20sp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/cardView"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="480dp"
        android:layout_marginBottom="-235dp"
        android:fontFamily="@font/inter_semibold"
        android:paddingBottom="10dp"
        android:text="@string/title_reservas"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/purple_200"
        android:textSize="16sp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/inter_semibold"
        android:paddingBottom="10dp"
        android:text="@string/title_horarios"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/purple_200"
        android:textSize="16sp"
        tools:visibility="visible" />

    <View
        android:id="@+id/squareView"
        android:layout_width="49dp"
        android:layout_height="90dp"
        android:layout_below="@id/textView7"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/square_background"
        android:visibility="visible" />

    <View
        android:id="@+id/whiteSquareView"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@id/textView7"
        android:layout_marginStart="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:layout_toEndOf="@id/squareView"
        android:background="@drawable/white_square_background"
        android:visibility="visible" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:layout_below="@id/textView"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/purple_100"
        app:cardCornerRadius="10dp"
        tools:ignore="NotSibling">

        <ImageView
            android:id="@+id/img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name" />

    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardView"
        android:layout_alignStart="@id/textView"
        android:layout_marginTop="31dp"
        android:descendantFocusability="beforeDescendants">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/title_tarefa"
            android:textColor="@color/purple_200"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/card_background"
            android:baselineAligned="true"
            android:descendantFocusability="afterDescendants"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textAlignment="center">

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/text_tarefa"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/line2"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/inter"
                android:text="@string/descricao_tarefa"
                android:textColor="@color/gray"
                android:textSize="11sp" />

        </LinearLayout>

    </FrameLayout>

</RelativeLayout>
